fix resume css on mobile

--- a/src/components/Resume/Resume.module.scss
+++ b/src/components/Resume/Resume.module.scss
@@ -33,6 +33,7 @@
     }
 
     .resumes {
+      margin-top: 48px;
       width: 100%;
       display: flex;
       justify-content: flex-start;
@@ -76,6 +77,7 @@
       }
 
       @media screen and (max-width: 992px) {
+        margin-top: 0;
         padding: 15px;
         flex-direction: column;
       }
